--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,7 @@ CHANNEL_ID=your_channel_id_here
 ADMIN_CHAT_ID=your_admin_chat_id_here
 DEEPSEEK_API_KEY=your_deepseek_api_key_here
 DEEPSEEK_API_URL=https://api.deepseek.com/v1/chat/completions
+
+# Instagram
+INSTAGRAM_USERNAME=your_username
+INSTAGRAM_PASSWORD=your_password
